--- a/views/inicio.erb
+++ b/views/inicio.erb
@@ -1,6 +1,6 @@
     <div class="row">
       <div class="large-6 columns">
-        <img src="/images/logo.png" style="margin-top: 50px;" />
+        <h2>License Plate Detector</h2>
       </div>
       <div class="large-6 columns main_menu">
         <ul>
