--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chapatronics - Panel de control</title>
+    <title>License Plate Detector - Panel de control</title>
     <link rel="stylesheet" href="/stylesheets/foundation.css" />
     <link rel="stylesheet" href="/stylesheets/custom.css" />
     <script src="/javascripts/vendor/modernizr.js"></script>
@@ -18,7 +18,7 @@
 <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
 </ul>
 <section class="top-bar-section">
- 
+
 <ul class="right">
 <!--
 <li class="divider"></li>
@@ -60,7 +60,7 @@
 
 
     <%= yield %>
-    
+
     <script src="/javascripts/vendor/jquery.js"></script>
     <script src="/javascripts/foundation.min.js"></script>
     <script>
