fix sensor encendido

--- a/views/seguimiento.erb
+++ b/views/seguimiento.erb
@@ -81,6 +81,7 @@
                         window.onProcess= false;
                       };
                       function close()  {
+                        console.log(window.sensor);
                         if (window.sensor)  {
                             turnMotorTwoOn();
                             window.setTimeout(turnMotorTwoOff, <%= @config['turnMotorTwoOff'] %> );
