--- a/views/ajustes.erb
+++ b/views/ajustes.erb
@@ -1,7 +1,7 @@
     <div class="row">
-      <div class="large-6 columns">
-        <img src="/images/logo.png" style="margin-top: 50px;" />
-      </div>
+        <div class="large-6 columns">
+          <h2 style="margin-top: 200px;">License Plate Detector</h2>
+        </div>
       <div class="large-6 columns main_menu">
         <h3>Ajustes</h3>
         <form method="post">
@@ -11,7 +11,7 @@
             <p>turnMotorTwoOn <input name="turnMotorTwoOn_value" type="text" style="width: 20%;" value="<%= @current_config['turnMotorTwoOn'] %>" /></p>
             <p>turnMotorTwoOff <input name="turnMotorTwoOff_value" type="text" style="width: 20%;" value="<%= @current_config['turnMotorTwoOff'] %>" /></p>
             <p><input type="submit" value="Guardar" /></p>
-            
+
           </fieldset>
         </form>
       </div>
